--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ margin-bottom: 20px;
 border-radius: 10px;
 vertical-align: middle;
 }
-.showModalReset:hover{
+.showModalReset:hover, .showModalTip:hover{
   background-color: greenyellow;
 }
 .btn{
